tests/machine/x/go/group_items_iteration.error
Error on line 0: run error: exit status 1
# command-line-arguments
../../../tests/machine/x/go/group_items_iteration.go:27:36: data.Group is not a type
../../../tests/machine/x/go/group_items_iteration.go:28:30: data.Group is not a type
../../../tests/machine/x/go/group_items_iteration.go:35:15: data.Group is not a type
../../../tests/machine/x/go/group_items_iteration.go:41:19: data.Group is not a type
../../../tests/machine/x/go/group_items_iteration.go:51:32: in call to _toAnySlice, cannot infer T (declared at ../../../tests/machine/x/go/group_items_iteration.go:282:18)

1: //go:build ignore
